Update list: • height of list item • unifed list style in `list.scss` • update tags color issue • Vertical alignment • Update border color

--- a/client/src/theme/components/tags.scss
+++ b/client/src/theme/components/tags.scss
@@ -4,31 +4,31 @@
 
 .tag {
   padding: 0.25rem 0.5rem;
-  height: auto;
+  min-height: auto;
   margin: 0;
 }
 
-.role {
+.label-role {
   .owner {
-    // border: 2px solid var(--parsec-color-tags-blue500);
+    border: 1px solid var(--parsec-color-tags-blue500);
     color: var(--parsec-color-tags-blue500);
     background: none;
   }
 
   .manager {
-    // border: 2px solid var(--parsec-color-tags-indigo500);
+    border: 1px solid var(--parsec-color-tags-indigo500);
     color: var(--parsec-color-tags-indigo500);
     background: none;
   }
 
   .contributor {
-    // border: 2px solid var(--parsec-color-tags-green500);
+    border: 1px solid var(--parsec-color-tags-green500);
     color: var(--parsec-color-tags-green500);
     background: none;
   }
 
   .reader {
-    // border: 2px solid var(--parsec-color-tags-orange500);
+    border: 1px solid var(--parsec-color-tags-orange500);
     color: var(--parsec-color-tags-orange500);
     background: none;
   }
